# OpenTokenizer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Tokenization/: main.txt
Tokenization/tokenization_lab/src-tauri/src/: analysis.rs  visualization.rs
docs/api/: tokenizers.md
examples/: bpe_tokenizer_demo.py  character_tokenizer_demo.py  model_adapters_demo.py  wordpiece_tokenizer_demo.py
mltokenizer-rs/src/: lib.rs
scripts/: run_all_tests.py
src/mltokenizer/: __init__.py  cli.py
src/mltokenizer/algorithms/: __init__.py  bpe.py  character.py  sentencepiece_tokenizer.py  unigram.py  wordpiece.py
src/mltokenizer/core/: __init__.py  base_tokenizer.py  errors.py  registry.py
src/mltokenizer/encoding/: __init__.py  encoder.py  special_tokens.py
src/mltokenizer/models/: __init__.py  bert.py  custom.py  gpt.py  llama.py  t5.py
src/mltokenizer/normalization/: __init__.py  languages.py  normalizers.py  unicode.py
src/mltokenizer/performance/: __init__.py  cache.py  metrics.py  optimizers.py  profiler.py
src/mltokenizer/preprocessing/: __init__.py  pipeline.py  sequence_handling.py  text_cleaning.py
src/mltokenizer/rust_extensions/: __init__.py  bindings.py
src/mltokenizer/server/: __init__.py  api.py
src/mltokenizer/utils/: __init__.py  logging.py  parallel.py  serialization.py  validation.py
src/tokenizers/algorithms/: bpe.py  wordpiece.py
src/tokenizers/core/: base_tokenizer.py  errors.py  registry.py
src/tokenizers/encoding/: encoder.py  special_tokens.py
src/tokenizers/normalization/: languages.py  normalizers.py  unicode.py
src/tokenizers/preprocessing/: pipeline.py  sequence_handling.py  text_cleaning.py
src/tokenizers/utils/: logging.py  parallel.py
tests/python/integration/: test_tokenization_pipeline.py
tests/python/performance/: test_tokenizer_performance.py
tests/python/unit/: test_bpe_tokenizer.py  test_character_tokenizer.py  test_encoder.py  test_normalizers.py  test_performance_metrics.py  test_special_tokens.py  test_wordpiece_tokenizer.py
tokenization_lab/src-tauri/src/: visualization.rs
