[tool.poetry]
name = "mltokenizer"
version = "0.1.0"
description = "A comprehensive ML tokenization system for research and production"
authors = ["Nik Jois <nikjois@llamasearch.ai>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "mltokenizer", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tokenization", "nlp", "machine learning", "transformer", "language model"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.26.3"
pydantic = "^2.5.3"
tqdm = "^4.65.0"
loguru = "^0.7.2"
click = "^8.1.6"
regex = "^2023.6.3"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
protobuf = "^4.24.3"
sentencepiece = "^0.2.0"
transformers = "^4.36.2"
scipy = "^1.11.4"
ujson = "^5.8.0"
tokenizers = "^0.14.0"
jinja2 = "^3.1.2"
huggingface-hub = "^0.17.3"
tiktoken = "^0.5.1"
PyYAML = "^6.0.1"
requests = "^2.31.0"
typer = "^0.9.0"
rich = "^13.5.2"
maturin = "^1.2.3"
prometheus-client = "^0.17.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-benchmark = "^4.0.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
pre-commit = "^3.4.0"
ruff = "^0.0.287"
hypothesis = "^6.82.6"

[tool.poetry.group.tokenization_lab]
optional = true

[tool.poetry.group.tokenization_lab.dependencies]
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
websockets = "^11.0.3"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tokenize = "mltokenizer.cli:app"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"